<resources>
    <string name="app_name">Near Chat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigationEventItemLabel">Event</string>
    <string name="navigationProfileItemLabel">Profile</string>
    <string name="navigationMoreItemLabel">More</string>
    <string name="title_activity_pruebas">Pruebas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_event_description">Actualmente no estás participando en ningún evento, acercate y entra en uno o
        crea el tuyo propio
    </string>
    <string name="event_end_description">El evento en el que te encuentras ha terminado o el administrador ha decidio
        finalizarlo, ¿Salir del evento?
    </string>
    <string name="loading_event_description">Comprobando si estás dentro del área del evento...</string>
    <string name="cant_enter_description">Estás demasiado lejos del área del evento al que quieres entrar, acercate más
        y prueba de nuevo
    </string>
    <string name="too_far_description">Te has alejado demasiado del área del evento, acercate de nuevo para volver a
        entrar
    </string>
    <string name="no_event_button_label">Crear evento</string>
    <string name="event_end_button_label">Salir del evento</string>
    <string name="cant_enter_button_label">Intentar de nuevo</string>
    <string name="too_far_button_label">Entrar de nuevo</string>
    <string name="title_activity_maps">Map</string>
    <string name="edit_event_change_photo">Cambiar foto</string>
    <string name="edit_event_close_button_descriptor">edit user profile close button</string>
    <string name="edit_event_title">Editar Evento</string>
    <string name="edit_event_save_button_descriptor">save changes edit event toolbar button</string>
    <string name="edit_event_event_name_label">Nombre del Evento</string>
    <string name="edit_event_event_name_hint">Nombre del evento</string>
    <string name="edit_event_end_date_label">Fecha de finalización</string>
    <string name="edit_event_range_label">Rango del evento</string>
    <string name="edit_event_range_hint">50</string>
    <string name="edit_event_change_meassure_type_button">M</string>
    <string name="edit_event_range_helper">Mínimo 10 metros, máximo 1000 metros</string>
    <string name="edit_event_location_label">Localización</string>
    <string name="edit_event_max_people_label">Aforo máximo virtual</string>
    <string name="edit_profile_change_profile_photo_label">Cambiar foto de perfil</string>
    <string name="edit_profile_close_button_descriptor">edit user profile close button</string>
    <string name="edit_profile_title_label">Editar Perfil</string>
    <string name="edit_profile_save_button_descriptor">save changes edit profile toolbar button</string>
    <string name="edit_profile_username_label">Nombre de usuario</string>
    <string name="edit_profile_username_hint">Username</string>
    <string name="edit_profile_name_surname_label">Nombre y apellidos</string>
    <string name="edit_profile_name_surname_hint">Name Surname</string>
    <string name="edit_profile_bio_label">Estado</string>
    <string name="edit_profile_bio_hint">Bio or something</string>
    <string name="toolbar_my_position_button_descriptor">show my position button</string>
    <string name="toolbar_event_info_button_descriptor">show event info button</string>
    <string name="toolbar_show_hide_conversations_button_descriptor">show and hide conversations button</string>
    <string name="toolbar_change_between_map_list_button_descriptor">change between map and list button</string>
    <string name="event_chat_send_message_button_descriptor">enviar mensaje</string>
    <string name="event_chat_send_message_edit_text_hint">Enviar un mensaje…</string>
    <string name="event_helper_close_button_descriptor">close button</string>
    <string name="event_list_search_near_event_edit_text_hint">Busca evento cercano…</string>
    <string name="home_pager_near_events_list_title">Eventos Cercanos</string>
    <string name="toolbar_show_event_area_button_descriptor">show event area button</string>
    <string name="login_email_edit_text_hint">Email</string>
    <string name="login_password_edit_text_hint">Contraseña</string>
    <string name="login_button_label">Login</string>
    <string name="login_to_register_button_label">¿No tienes cuenta? Regístrate</string>
    <string name="register_add_profile_picture_button_label">Añadir foto de perfil</string>
    <string name="register_back_to_login_button_descriptor">back to login button</string>
    <string name="register_title_label">Registrarse</string>
    <string name="register_register_button_descriptor">register toolbar button</string>
    <string name="username_label">Nombre de usuario</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="email_label">Email</string>
    <string name="password_hint">Contraseña</string>
    <string name="password_label">Contraseña</string>
    <string name="view_password_button_descriptor">view password button</string>
    <string name="register_button_label">Registrarse</string>
    <string name="comunication_title_label">Comunicación</string>
    <string name="close_notch_button_descriptor">close popup window</string>
    <string name="comunicate_talking_label">Comunicarte hablando</string>
    <string name="comunicate_talking_helper_label">Hasta 10 metros de tí</string>
    <string name="comunicate_shouting_helper_label">Hasta 20 metros de tí</string>
    <string name="comunicate_shouting_label">Comunicarte gritando</string>
    <string name="communicate_broadcast_label">Comunitarte globalmente</string>
    <string name="comunicate_broadcast_helper_label">Visible en todo el evento</string>
    <string name="visualize_notch_title_label">Visualizar</string>
    <string name="visualize_talking_label">Conversaciones hablando</string>
    <string name="visualize_talking_helper_label">Hasta 10 metros de tí</string>
    <string name="visualize_shouting_helper_label">Hasta 20 metros de tí</string>
    <string name="visualize_shouting_label">Conversaciones gritando</string>
    <string name="visualize_broadcast_label">Conversaciones globales</string>
    <string name="visualize_broadcast_helper_label">Visibles en todo el evento</string>
    <string name="event_toolbar_title_label">Evento</string>
    <string name="event_notch_exit_helper_label">Dejarás de poder participar en este evento</string>
    <string name="event_notch_exit_button_label">Salir del evento</string>
    <string name="user_toolbar_title">Usuario</string>
    <string name="toolbar_user_position_button_descriptro">user position button</string>
    <string name="toolbar_add_user_to_contact_button_descriptor">add or remove user from contact</string>
    <string name="toolbar_block_user_button_descriptor">block or unblock user button</string>
    <string name="user_notch_new_message_helper_label">Se iniciará una conversación privada</string>
    <string name="user_notch_new_message_button_label">Enviar mensaje</string>
    <string name="toolbar_edit_profile_button_descriptor">edit profile button</string>
    <string name="toolbar_edit_access_button_descriptor">edit access button</string>
    <string name="search_location_button_descriptor">search location button</string>
    <string name="search_location_edit_text_hint">Busca una ubicación…</string>
    <string name="toolbar_save_position_button_descriptor">save event location</string>
    <string name="toolbar_exit_without_save">close without save</string>
    <string name="toolbar_close_button_descritor">close current window button</string>
    <string name="edit_access_title_label">Editar Acceso</string>
    <string name="toolbar_button_exit_saving_descriptro">save changes toolbar button</string>
    <string name="change_email_label">Cambiar email</string>
    <string name="change_password_label">Cambiar Contraseña</string>
    <string name="new_password_edit_text_hint">Nueva contraseña</string>
    <string name="actual_password_edit_text_label">Contraseña actual</string>
    <string name="validate_password_label">Validar con contraseña</string>
    <string name="validate_password_helper_label">Es necesario introducir la contraseña actual para guardar cualquier
        cambio
    </string>
    <string name="log_out_button_label">Cerrar sesión</string>





    <!--Strings temporales implementación localizacion-->
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

</resources>
