<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SetEventLocationFragment"
        android:id="@+id/setEventLocationRoot">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blueGray">


        <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="Mapa coger posición"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:lineSpacingExtra="8sp"
                android:textSize="30sp"
                android:gravity="center_vertical"
                android:id="@+id/textView"/>

        <androidx.appcompat.widget.Toolbar
                app:contentInsetStartWithNavigation="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:background="@android:color/transparent"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/setEventLocationSearchToolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.enrech.nearchat.CustomElements.CustomToolbarButton
                        app:should_hide_on_change="true"
                        android:layout_weight="0"
                        android:layout_width="@dimen/custom_toolbar_item_height"
                        android:layout_height="@dimen/custom_toolbar_item_height"
                        app:srcCompat="@drawable/icon_search_white"
                        android:id="@+id/setEventLocationSearchButton"
                        android:scaleType="centerInside"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@drawable/bottom_home_background"
                        android:padding="10dp"
                        android:elevation="2dp"
                        android:contentDescription="@string/search_location_button_descriptor"
                        android:backgroundTint="@color/defaultBlue"
                        app:icon_initial_tint_color="@color/defaultWhite"
                        app:layout_constraintBottom_toBottomOf="@+id/setEventLocationSearchEditText"
                        android:layout_marginEnd="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/setEventLocationSearchEditText"/>

                <EditText
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:inputType="textPersonName"
                        android:ems="0"
                        android:id="@+id/setEventLocationSearchEditText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="18dp"
                        android:layout_marginStart="12dp"
                        android:elevation="2dp"
                        style="@style/Widget.AppCompat.AutoCompleteTextView"
                        android:background="@drawable/text_field_background"
                        android:fontFamily="@font/roboto"
                        android:textSize="16sp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:singleLine="true"
                        android:hint="@string/search_location_edit_text_hint"
                        android:layout_marginEnd="12dp"
                        app:layout_constraintEnd_toStartOf="@+id/setEventLocationSearchButton"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            app:elevation="0dp"
            android:padding="0dp"
            android:layout_margin="0dp">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/setEventLocationToolbar"
                app:contentInsetStartWithNavigation="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_toolbar_height"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:minHeight="@dimen/custom_toolbar_height">

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:id="@+id/LinerLayoutSetEventLocationToolbar"
                    android:gravity="center_vertical|end"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp">

                <com.enrech.nearchat.CustomElements.CustomToolbarButton
                        android:layout_marginEnd="12dp"
                        android:layout_weight="0"
                        android:layout_width="@dimen/custom_toolbar_item_height"
                        android:layout_height="@dimen/custom_toolbar_item_height"
                        android:clickable="true"
                        android:focusable="true"
                        app:srcCompat="@drawable/icon_position_white"
                        android:id="@+id/showMyPositionButton"
                        android:scaleType="centerInside"
                        android:background="@drawable/bottom_home_background"
                        android:padding="10dp"
                        android:elevation="2dp"
                        app:should_hide_on_change="true"
                        android:contentDescription="@string/toolbar_my_position_button_descriptor"
                        android:backgroundTint="@color/defaultBlue"
                        app:icon_initial_tint_color="@color/defaultWhite"/>

                <com.enrech.nearchat.CustomElements.CustomToolbarLabel
                        android:text=""
                        android:maxLines="2"
                        app:autoSizeTextType="uniform"
                        app:autoSizeStepGranularity="2sp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/custom_toolbar_item_height"
                        android:id="@+id/setEventLocationEmptyTextView"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/roboto_bold"
                        android:visibility="invisible"
                        android:textColor="@color/brokenBlack"
                        android:alpha="0"/>

                <com.enrech.nearchat.CustomElements.CustomToolbarButton
                        app:should_hide_on_change="true"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="0"
                        android:layout_width="@dimen/custom_toolbar_item_height"
                        android:layout_height="@dimen/custom_toolbar_item_height"
                        app:srcCompat="@drawable/icon_done_white"
                        android:id="@+id/setEventLocationSaveButton"
                        android:scaleType="centerInside"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@drawable/bottom_home_background"
                        android:padding="10dp"
                        android:elevation="2dp"
                        android:contentDescription="@string/toolbar_save_position_button_descriptor"
                        android:backgroundTint="@color/defaultBlue"
                        app:icon_initial_tint_color="@color/defaultWhite"/>

                <com.enrech.nearchat.CustomElements.CustomToolbarButton
                        app:should_change_color="true"
                        app:secundary_drawable="@drawable/icon_position_pin_white"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="0"
                        android:layout_width="@dimen/custom_toolbar_item_height"
                        android:layout_height="@dimen/custom_toolbar_item_height"
                        app:srcCompat="@drawable/icon_close_white"
                        android:id="@+id/setEventLocationCloseButton"
                        android:scaleType="centerInside"
                        android:background="@drawable/bottom_home_background"
                        android:padding="10dp"
                        android:elevation="2dp"
                        android:contentDescription="@string/toolbar_exit_without_save"
                        android:backgroundTint="@color/defaultBlue"
                        app:icon_initial_tint_color="@color/defaultWhite"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>